--- a/client/package.json
+++ b/client/package.json
@@ -3,13 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-react": "^2.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
-    "bootstrap": "^5.2.3",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.7.4",
+    "react-bootstrap": "^2.7⁄.4",
+     "auth0": "^3.3.0",
+    "axios": "^1.3.6",
+    "bootstrap": "^5.2.3",
+    "cloudinary": "^1.36.1",
+    "cloudinary-core": "^2.13.0",
+    "cloudinary-react": "^1.8.1",
+    "devicon": "^2.15.1",
+    "file-saver": "^2.0.5",
+    "firebase": "^9.20.0",
+    "nodemailer": "^6.9.1",
+    "react-dropzone": "^14.2.3",
+    "react-icons": "^4.8.0",
+    "react-markdown": "^8.0.7",
+    "react-quill": "^2.0.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
